Lagring av vaktlisteskjemaet overskriver ikke ledige plasser (#151) (#159)
* Lagring av vaktlisteskjemaet overskriver ikke ledige plasser (#151)

Skjemaet sender originalMinimumStaff, og UpdateEvent endrer bemanningen
relativt fra fersk verdi under ressurslåsen, i én transaksjon. Uendret
bemanning skrives ikke. Reduksjon som ville fjerne bemannede vakter gir
400 (ShiftRules.MinimumStaffAfterChange, felles med «Fjern ledig plass»).
Felles radlås i Data/RowLocks.cs. Maler sender ikke feltet.


* Sammenlign og sett i stedet for relativ endring av bemanning (#151)

UpdateEvent setter MinimumStaff bare når lagret verdi fortsatt er den
skjemaet ble lastet med; uendret bemanning skrives ikke, og retry med
samme verdi er trygt. Ellers ConcurrentUpdateException (409) med lagrede
verdier i meldingen, og hele lagringen rulles tilbake. Alle ressursene i
vaktlista låses (én UPDATE etter vaktlistelåsen), så også endring av tider
og vakttype skjer under ressurslåsen. Sperre mot dobbel lagring i
EventForm og EventPage.


---------
