# src/Middagsasen.Planner.Api/openapi/openapi.json
@@ -1328,6 +1328,16 @@
               }
             }
           },
+          "409": {
+            "description": "Conflict",
+            "content": {
+              "application/problem+json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              }
+            }
+          },
           "401": {
             "description": "Unauthorized",
             "content": {
@@ -5708,6 +5718,13 @@
           },
           "minimumStaff": {
             "type": "integer",
+            "format": "int32"
+          },
+          "originalMinimumStaff": {
+            "type": [
+              "null",
+              "integer"
+            ],
             "format": "int32"
           },
           "isDeleted": {
